--- a/GestorHorario/GestorHorario/appsettings.json
+++ b/GestorHorario/GestorHorario/appsettings.json
@@ -1,6 +1,9 @@
 {
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=horarios;Trusted_Connection=True;MultipleActiveResultSets=true"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GestorHorario-BDEFF887-112D-4DF0-8DE7-394DC0781719;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(local);Initial Catalog=horarios;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
